--- a/Server/src/main/resources/application.yml
+++ b/Server/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://main30.cwvzsuh16bdl.ap-northeast-2.rds.amazonaws.com:13306/main30?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-    username: admin
-    password: 12345678
+    url: jdbc:h2:mem:test
   mvc:
-    pathmatch:
+    path match:
       matching-strategy: ant_path_matcher
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -14,6 +17,12 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        time_zone: +09:00
+        use_sql_comments: true
+
+  sql:
+    init:
+      data-locations: classpath*:db/h2/data.sql
 
 mail:
   address:
