--- a/Server/src/main/resources/application-server.yml
+++ b/Server/src/main/resources/application-server.yml
@@ -1,19 +1,11 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://main30.cwvzsuh16bdl.ap-northeast-2.rds.amazonaws.com:13306/main30?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
     username: admin
+    url: jdbc:mysql://huijumain30.cwvzsuh16bdl.ap-northeast-2.rds.amazonaws.com:3306/huijumain30
     password: 12345678
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
 
 mail:
   address:
